<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>foss-webparent</artifactId>
		<groupId>com.deppon.foss</groupId>
		<version>0.0.1-express-SNAPSHOT</version>
		<relativePath>../../foss-webparent</relativePath>
	</parent>

	<artifactId>pkp-deliver-web</artifactId>
	<packaging>war</packaging>
	<name>pkp-deliver-web</name>


<properties>
		<log4j.version>1.2.17</log4j.version>
		<jdk.version>1.6</jdk.version>
		<servlet-version>2.5</servlet-version>
		<jsp-version>2.0</jsp-version>
		<!-- struts version -->
		<commons-lang3.version>3.1</commons-lang3.version>
		<log4j.version>1.2.17</log4j.version>
		<project.build.sourceEncoding>encoding</project.build.sourceEncoding>
		<bps.version>6.6</bps.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<dpap-version>1.1.2</dpap-version>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<exclusions>
				<exclusion>
					<groupId>commons-collections</groupId>
  					<artifactId>commons-collections</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>foss-print</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>jsp-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>web-login</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>pkp-deliver</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>pkp-predeliver</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>pkp-waybill</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>bse-baseinfo</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>bse-dict</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>stl-common</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>stl-consumer</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>stl-pay</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>pkp-sign</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>pkp-pricing</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>bse-common</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-stock</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-stockchecking</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-unload</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-load</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-trackings</artifactId> 
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>pkp-pickup</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-partialline</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>stl-agency</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-scheduling</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-exceptiongoods</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-departure</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>pkp-order</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-airfreight</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-arrival</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.foss</groupId>
			<artifactId>tfr-partialline</artifactId>
			<version>0.0.1-express-SNAPSHOT</version>
		</dependency>
		
		<!-- bpms api -->
		<dependency>
			<groupId>com.deppon.bpms</groupId>
			<artifactId>bpms-client</artifactId>
			<version>3.1</version>
		</dependency>



		<!-- server lib -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- LOGGING begin -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.3</version>
		</dependency>
		<!-- 3rd -->
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>xstream-1.2.2</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>sdo-api-v2.1.0</artifactId>
			<version>2.1.0</version>
		</dependency>

		<!-- BPS -->
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>bfs_client</artifactId>
			<version>${bps.version}</version>
		</dependency>

		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>bfs_client_eos</artifactId>
			<version>${bps.version}</version>
		</dependency>

		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>bfs_common</artifactId>
			<version>${bps.version}</version>
		</dependency>

		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>bfs_console</artifactId>
			<version>${bps.version}</version>
		</dependency>

		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>bfs_engineall</artifactId>
			<version>${bps.version}</version>
		</dependency>

		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>bfs_interface</artifactId>
			<version>${bps.version}</version>
		</dependency>

		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>bps-api</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>com.eos.foundation</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>eos-access</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>eos-access-ejb</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>eos-common</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>eos-das</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>eos-data</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>eos-infra</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>eos-runtime</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>eos-sca</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>eos-system</artifactId>
			<version>${bps.version}</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>sca-api</artifactId>
			<version>${bps.version}</version>
		</dependency>

		<!-- Hessian begin -->
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>hessian</artifactId>
			<version>4.0.7</version>
		</dependency>
		<!-- Hessian end -->

		<!-- tag lib begin -->
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>bps-tag</artifactId>
			<version>6.6</version>
		</dependency>
		<dependency>
			<groupId>com.deppon.bps</groupId>
			<artifactId>bps-taglib4j</artifactId>
			<version>6.6</version>
		</dependency>
		<!-- tag lib end -->
		
		<!-- 单点 -->
		<dependency>
			<groupId>com.deppon.cas</groupId>
			<artifactId>casclient</artifactId>
			<version>2.1.1</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat6-maven-plugin</artifactId>
				<configuration>
					<path>/pkp-deliver-web</path>
					<contextReloadable>true</contextReloadable>
					<systemProperties>
	   					 <JAVA_OPTS>-Xms1024m -Xmx1024m -XX:PermSize=128M -XX:MaxPermSize=256m</JAVA_OPTS>
					</systemProperties>
				</configuration>
			
			</plugin>
     </plugins>
		<!--
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.jrxml</include>
					<include>**/images/*</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>
		-->
	</build>
</project>
